fix a lot of things

--- a/public/css/registration/login.css
+++ b/public/css/registration/login.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(0, 0, 0);
-  background-image: url("/img/bg2.jpg");
+  background-image: url("/img/registration/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
