--- a/views/admin/notifications.ejs
+++ b/views/admin/notifications.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -19,26 +20,30 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!-- style sheets  -->
+    <!-- toastify -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- style sheets -->
     <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/admin/notifications.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
+    <link rel="stylesheet" href="/css/admin/notifications.css" />
     <title>Notifications</title>
   </head>
-
-  <body>
+  <body data-userid="<%= user._id %>">
     <%- include("./nav.ejs") %>
     <main>
       <div class="container-xl px-4 mt-4">
-
         <nav class="nav nav-borders">
-          <li><a class="nav-link" href="/admin/settings">Profile</a></li>
-          <li><a class="nav-link" href="/admin/security">Security</a></li>
+          <li><a class="nav-link" href="/admin/<%= user._id %>/settings">Profile</a></li>
+          <li><a class="nav-link" href="/admin/<%= user._id %>/security">Security</a></li>
           <li><a class="nav-link active" href="#">Notifications</a></li>
         </nav>
 
         <hr class="mt-0 mb-4" />
-        
+
         <div class="row">
           <div class="col-xl-8">
             <div class="card mb-4">
@@ -71,7 +76,7 @@
                     <button class="btn btn-primary" type="submit">
                       Save changes
                     </button>
-                    <button class="btn clear_btn" type="button">Reset</button>
+                    <button class="btn clear_btn" type="reset">Reset</button>
                   </div>
                 </form>
               </div>
