--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -12,8 +13,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/css/registration/forgetpassword.css" />
-    <title>Forgot password</title>
+    <!-- style sheets  -->
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/registration/forgetpassword.css" />
+    <title>forgot password</title>
   </head>
   <body>
     <main>
@@ -83,39 +86,40 @@
       const error = document.getElementById("error");
       const error2 = document.getElementById("error2");
       const error3 = document.getElementById("error3");
+      let email;
 
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
-        const email = document.getElementById("email").value;
+        email = document.getElementById("email").value;
 
         const errorMsg = validateForm(form);
-        if (errorMsg) error.innerHTML = errorMsg;
-        else {
-          // check if email is in the database
-          try {
-            const res = await fetch("/forgetpassword", {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({ email }),
-            });
-            const data = await res.json();
-            if (data.errMsg) error.innerHTML = data.errMsg;
-            else if (data.err) location.assign("/error");
-            else {
-              document.getElementById("emailPart").style.display = "none";
-              document.getElementById("otpPart").style.display = "block";
-              sendCode();
-            }
-          } catch (err) {
-            location.assign("/error");
-          }
+        if (errorMsg) return (error.innerHTML = errorMsg);
+
+        // check if email is in the database
+        try {
+          const res = await fetch("/forgetpassword", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ email }),
+          });
+
+          const data = await res.json();
+
+          if (data.msg) {
+            document.getElementById("emailPart").style.display = "none";
+            document.getElementById("otpPart").style.display = "block";
+            sendCode();
+          } else if (data.errMsg) error.innerHTML = data.errMsg;
+          else location.assign("/error");
+        } catch (err) {
+          console.log(err);
+          location.assign("/error");
         }
       });
 
       function sendCode() {
-        const email = document.getElementById("email").value;
         try {
           fetch("/forgetpassword/sendcode", {
             method: "POST",
@@ -125,6 +129,7 @@
             body: JSON.stringify({ email }),
           });
         } catch (err) {
+          console.log(err);
           location.assign("/error");
         }
       }
@@ -132,7 +137,6 @@
       document.getElementById("resend").addEventListener("click", sendCode);
 
       async function ckeckCode() {
-        const email = document.getElementById("email").value;
         try {
           const res = await fetch("/forgetpassword/checkcode", {
             method: "POST",
@@ -141,12 +145,17 @@
             },
             body: JSON.stringify({ email, otp }),
           });
+
           const data = await res.json();
-          if (data.errMsg) error2.innerHTML = data.errMsg;
-          else if (data.err) location.assign("/error");
-          else document.getElementById("otpPart").style.display = "none";
-          document.getElementById("changePasswordPart").style.display = "block";
+
+          if (data.msg) {
+            document.getElementById("otpPart").style.display = "none";
+            document.getElementById("changePasswordPart").style.display =
+              "block";
+          } else if (data.errMsg) error2.innerHTML = data.errMsg;
+          else location.assign("/error");
         } catch (err) {
+          console.log(err);
           location.assign("/error");
         }
       }
@@ -200,32 +209,30 @@
         ckeckCode();
       }
       /////////////////////////////////////////////////////////////////////////
+
       const form2 = document.getElementById("form2");
       form2.addEventListener("submit", async (e) => {
         e.preventDefault();
-        const email = document.getElementById("email").value;
 
         const errorMsg = validateForm(form2);
-        if (errorMsg) error3.innerHTML = errorMsg;
-        else {
-          try {
-            const res = await fetch("/forgetpassword/updatepassword", {
-              method: "PUT",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                email,
-                password: document.getElementById("password").value,
-              }),
-            });
-            const data = await res.json();
-            if (data.msg) location.assign(`/login`);
-            else if (data.err) location.assign("/error");
-            else error3.innerHTML = "Somthing went wrong";
-          } catch (err) {
-            location.assign("/error");
-          }
+        if (errorMsg) return (error3.innerHTML = errorMsg);
+        try {
+          const res = await fetch("/forgetpassword/update", {
+            method: "PUT",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              email,
+              password: document.getElementById("password").value,
+            }),
+          });
+          const data = await res.json();
+          if (data.msg) location.assign(`/login`);
+          else location.assign("/error");
+        } catch (err) {
+          console.log(err);
+          location.assign("/error");
         }
       });
     </script>
