--- a/public/css/registration/forgetpassword.css
+++ b/public/css/registration/forgetpassword.css
@@ -1,12 +1,6 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
 body {
   background-color: rgb(0, 0, 0);
-  background-image: url("/img/bg2.jpg");
+  background-image: url("/img/registration/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
