--- a/public/css/registration/signup.css
+++ b/public/css/registration/signup.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(0, 0, 0);
-  background-image: url("/img/bg2.jpg");
+  background-image: url("/img/registration/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -13,7 +13,7 @@ body::after {
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #080710;
   opacity: 0.7;
   z-index: 1;
@@ -37,7 +37,7 @@ form * {
   outline: none;
   border: none;
 }
-.title{
+.title {
   margin-bottom: 10px;
 }
 h1,
