--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -4,19 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-      />
-      <link rel="stylesheet" href="/css/general.css" />
-      <link rel="stylesheet" href="/css/admin/nav.css" />
+    />
+    <!-- style sheets  -->
+    <link rel="stylesheet" href="/css/general.css" />
+    <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Admin-Dashboard</title>
   </head>
-  <body>
+  <body data-userid="<%= user._id %>">
     <%- include("./nav.ejs") %>
-    <main>Admin-Dashboard</main>
+    <main>
+      <h1>Admin Dashboard</h1>
+      <p>Welcome admin</p>
+    </main>
   </body>
 </html>
