added the instructor css and fixed img paths

--- a/views/instructor/nav.ejs
+++ b/views/instructor/nav.ejs
@@ -1,7 +1,7 @@
 <header>
   <!--Navigation-->
   <nav id="nav">
-    <img src="/img/DSK-JF-light-logo.png" alt="" />
+    <img src="/img/logos/DSK-JF-light-transparent-logo.png" alt="" />
     <div class="navigation">
       <!-- nezabat classes -->
       <div class="secondary-nav">
